# libarchive

./: CMakeLists.txt  Makefile.am  configure.ac  main.cpp
.github/workflows/: ci.yml  codeql.yml  lint.yml  scorecard.yml
libarchive/: archive.h  archive_acl.c  archive_acl_private.h  archive_check_magic.c  archive_entry.h  archive_entry_link_resolver.c  archive_entry_sparse.c  archive_entry_xattr.c  archive_integer.h  archive_match.c  archive_pathmatch.c  archive_private.h  archive_read.c  archive_read_append_filter.c  archive_read_data_into_fd.c  archive_read_disk_posix.c  archive_read_disk_set_standard_lookup.c  archive_read_disk_windows.c  archive_read_open_fd.c  archive_read_open_file.c  archive_read_open_filename.c  archive_read_open_memory.c  archive_read_private.h  archive_read_support_filter_bzip2.c  archive_read_support_filter_compress.c  archive_read_support_filter_grzip.c  archive_read_support_filter_gzip.c  archive_read_support_filter_lrzip.c  archive_read_support_filter_lz4.c  archive_read_support_filter_lzop.c  archive_read_support_filter_program.c  archive_read_support_filter_rpm.c  archive_read_support_filter_uu.c  archive_read_support_filter_xz.c  archive_read_support_filter_zstd.c  archive_read_support_format_7zip.c  archive_read_support_format_all.c  archive_read_support_format_ar.c  archive_read_support_format_cab.c  archive_read_support_format_cpio.c  (+48 more)
libarchive/test/: CMakeLists.txt  read_open_memory.c  test_7zip_filename_encoding.c  test_acl_from_text_overread.c  test_ar_mode.c  test_archive_clear_error.c  test_archive_match_time.c  test_archive_pathmatch_oob.c  test_archive_read.c  test_archive_read_add_passphrase.c  test_archive_read_close_twice.c  test_archive_read_next_header_empty.c  test_archive_read_next_header_raw.c  test_archive_read_open2.c  test_archive_read_set_filter_option.c  test_archive_read_set_format_option.c  test_archive_read_set_option.c  test_archive_read_set_options.c  test_archive_set_error.c  test_archive_string_conversion.c  test_archive_string_conversion_overread.c  test_archive_write_add_filter.c  test_archive_write_set_filter_option.c  test_archive_write_set_format_option.c  test_archive_write_set_option.c  test_archive_write_set_options.c  test_archive_write_set_passphrase.c  test_compat_gtar.c  test_compat_gtar_large.c  test_compat_gzip.c  test_compat_lz4.c  test_compat_perl_archive_tar.c  test_compat_plexus_archiver_tar.c  test_compat_solaris_pax_sparse.c  test_compat_zip.c  test_filter_count.c  test_fuzz.c  test_fuzz_consumer.h  test_gnutar_filename_encoding.c  test_pax_filename_encoding.c  (+102 more)
tar/: CMakeLists.txt  bsdtar.exe.manifest  bsdtar.h  bsdtar.rc  read.c  subst.c  util.c  write.c
tar/test/: CMakeLists.txt  test_option_acls.c  test_option_stdout_size_exceeds_declared.c  test_option_stdout_size_exceeds_declared_deflate.zip.uu  test_option_stdout_size_exceeds_declared_stored.zip.uu  test_stdio.c
test_utils/: test_main.c
unzip/: CMakeLists.txt  bsdunzip.c  bsdunzip.rc  bsdunzip_platform.h  bsdunzip_windows.c  bsdunzip_windows.h
unzip/test/: CMakeLists.txt  test_I.c  test_f.c  test_f_new.zip.uu  test_f_old.zip.uu  test_symlink.c  test_symlink_1.zip.uu  test_symlink_2.zip.uu  test_symlink_dotdot.c  test_symlink_dotdot.zip.uu  test_u.c
